<resources>
    <string name="app_name">블루클럽</string>
    <string name="empty"> </string>

    <string name="ready">준비 중인 기능이에요!</string>

    <!-- onboarding -->
    <string name="onboarding1_title">근무기록과 수입관리를 한번에!</string>
    <string name="onboarding1_description">매일 다른 근무 내용과 수입 내역을\n한 곳에서 기록하고 체계적으로 관리해 보세요</string>
    <string name="onboarding2_title">함께라면 더 쉽고 재밌어요!</string>
    <string name="onboarding2_description">매일 근무를 기록작성한 후\n수입인증을 통해 동기부여해 보세요</string>
    <string name="onboarding3_title">같이 정보 교류하고 소통해요!</string>
    <string name="onboarding3_description">같은 일을 하는 동료들과 고민을 나누고\n소통하며 서로의 정보를 교환해요</string>

    <string name="onboarding_btn">직업 설정하고 시작하기</string>

    <!-- login -->
    <string name="login_title">특수고용직의 파트너, 블루클럽</string>
    <string name="login_description">근무 내용을 쉽게 기록하고\n수입을 다른 사람들에게 자랑해보세요!</string>
    <string name="login_kakao">카카오로 3초만에 시작하기</string>
    <string name="login_naver">네이버로 시작하기</string>

    <!-- auth setting -->

    <string name="auth_job_setting">직업 설정</string>
    <string name="auth_goal_setting">목표 금액 설정</string>
    <string name="auth_year_setting">연차 설정</string>
    <string name="auth_nickname_setting">닉네임 설정</string>

    <!-- job setting -->
    <string name="auth_job_setting_title">어떤 일을 하고 계시나요?</string>
    <string name="auth_job_setting_description">내 직업과 일치하는 항목을 골라주세요.</string>

    <string name="job_golf">골프캐디</string>
    <string name="job_rider">배달 라이더</string>
    <string name="job_day_labor">일용직 근로자</string>

    <string name="job_delivery">택배 기사</string>
    <string name="job_insurance">보험 설계사</string>
    <string name="job_freelancer">기타·프리랜서</string>

    <string name="auth_year_setting_description">근무 시작년도를 선택해주세요</string>
    <string name="auth_choose_year">근무 시작년도 선택</string>

    <string name="auth_job_setting_finish">%s로 설정완료</string>
    <string name="auth_setting_finish_descriptin">가입완료까지 거의 다 왔어요!</string>

    <!-- goal setting -->
    <string name="goal_setting_title">매달 수입 목표를 입력해주세요</string>
    <string name="goal_setting_description">목표 금액은 최소 10만원부터 입력해주세요.</string>
    <string name="goal_setting_hint">목표 금액 입력</string>
    <string name="goal_setting_too_low">10만원 이상 입력해주세요.</string>
    <string name="goal_setting_too_high">9,999만원 이하 입력해주세요.</string>
    <string name="goal_setting_correct">멋진 목표 금액이에요!</string>
    <string name="goal_setting_amount_info">%1%s 원</string>
    <string name="goal_setting_finished">설정 완료</string>

    <!-- year setting -->
    <string name="year_title">근무를 시작한 년도를\n선택해주세요</string>
    <string name="year_select_title">근무 시작년도를 선택해주세요</string>
    <string name="next">다음</string>

    <!-- nickname setting -->
    <string name="nickname_title">닉네임을 설정해주세요</string>
    <string name="nickname_description">닉네임은 언제든 수정이 가능해요.</string>
    <string name="nickname_input">닉네임을 입력해주세요</string>
    <string name="check_duplication">중복확인</string>

    <string name="correct_nickname">사용 가능한 닉네임 입니다.</string>
    <string name="already_used_nickname">이미 사용 중인 닉네임입니다.</string>
    <string name="wrong_nickname">띄어쓰기 없이 한글, 영문, 숫자만 가능해요</string>
    <string name="nickname_length_limit">%d / 10</string>

    <!-- terms of service -->
    <string name="tos_title">블루 클럽을 이용하려면,\n정보 동의가 필요해요.</string>
    <string name="tos_entire">약관 전체 동의</string>
    <string name="tos_age">만 14세 이상입니다. (필수)</string>
    <string name="tos_service">서비스 이용약관 동의 (필수)</string>
    <string name="tos_privacy">개인정보 처리방침 동의 (필수)</string>
    <string name="tos_marketing">마케팅 수신 동의 (선택)</string>
    <string name="tos_event">이벤트 앱 푸시 수신 동의 (선택)</string>

    <string name="confirm">확인</string>

    <!-- auth setting finished -->
    <string name="auth_finished_title">블루클럽에 오신걸 환영해요!</string>
    <string name="auth_finished_description">이제 근무기록을 통해 관리하고\n나의 근무활동을 자유롭게 자랑해봐요</string>
    <string name="start_now">바로 시작하기</string>

    <!-- home -->
    <string name="income_achievement">달성 수입</string>
    <string name="income_input_hint">수입을 기록해봐요</string>
    <string name="move_to_workbook">근무 기록하고 달성률 채우러 가기</string>

    <string name="sharing_description">같은 직군끼리</string>
    <string name="sharing_title">정보교류 커뮤니티</string>
    <string name="work_info_description">블로버를 위한</string>
    <string name="work_info_title">근로 정보 모음집</string>

    <string name="release_info">오픈 예정</string>

    <string name="banner_title1">블루클럽과 함께하는</string>
    <string name="banner_title2">근무관리 잘하는 법 배워요</string>

    <string name="home_nickname">%s님</string>
    <string name="banner_info_no_record">%d월 %s님의 첫 기록이 기다려져요!</string>
    <string name="banner_info_no_today">%s님 깜빡하신 근무기록은 없으신가요?</string>
    <string name="banner_info_new">%s님 이번달 시작이 좋아요!</string>
    <string name="banner_info_normal">%d일 연속 코인 획득중이에요</string>

    <!-- work book -->
    <string name="workbook">근무수첩</string>
    <string name="monthly_record">%d월 기록</string>
    <string name="goal_setting">나의 목표 수입 설정</string>
    <string name="calendar_month_info">%d년 %d월</string>

    <string name="workday">근무</string>
    <string name="restday">휴무</string>
    <string name="leaveday">조퇴</string>

    <string name="workbook_daily_date_format">%s %s</string>
    <string name="workbook_daily_income_format">%s · %d건</string>
    <string name="workbook_daily_refresh">오늘은 충전하는 날</string>

    <string name="workbook_first_record">%d월의 근무기록이 없습니다.</string>

    <string name="workbook_no_record">작성된 근무기록이 없습니다.</string>

    <!-- bottom navigation -->
    <string name="home">홈</string>
    <string name="mypage">마이페이지</string>

    <!-- goal setting dialog -->
    <string name="goal_setting_dialog_title">매달 목표 수입 설정</string>
    <string name="goal_setting_dialog_description">목표 금액은 최소 10만원부터 입력해주세요.</string>

    <!-- daily work detail -->
    <string name="save">저장</string>
    <string name="daily_work_type">근무 형태</string>
    <string name="necessary">필수</string>
    <string name="memo">메모</string>
    <string name="add_photo">사진 첨부</string>
    <string name="select">선택</string>
    <string name="income_input">금액 입력</string>
    <string name="total_income">총 수입</string>
    <string name="auto_calculation">자동계산</string>
    <string name="expenditure_amount">지출액</string>
    <string name="saved_amount">저축액</string>
    <string name="goal_achieved_amount">목표수입 %s%% 기여</string>
    <string name="show_my_income">수입 자랑하기✌️</string>
    <string name="calculating_yet">계산 중이에요</string>
    <string name="daily_work_date_format">%d.%d %s</string>

    <string name="daily_caddie_rounding">라운딩 수</string>
    <string name="daily_caddie_p">캐디피 수입</string>
    <string name="daily_caddie_over_p">오버피 수입</string>
    <string name="daily_caddie_soil">배토 여부</string>

    <string name="daily_delivery_count">배달 건수</string>
    <string name="daily_delivery_income">배달 수입</string>
    <string name="daily_delivery_promotion_count">프로모션 건수</string>
    <string name="daily_delivery_promotion_income">프로모션 수입</string>
    
    <string name="daily_labor_name">현장명</string>
    <string name="daily_labor_income">일당</string>
    <string name="daily_labor_type">직종</string>
    <string name="daily_labor_man_hour">공수</string>
    <string name="daily_labor_place_name_hint">근무 현장명 입력</string>
    <string name="daily_labor_type_hint">직종명 입력</string>

    <string name="rest_title">오늘 하루는 제대로 충전해요</string>
    <string name="rest_description">휴무도 꾸준히 기록하는 습관\n너무 잘하고 있어요!</string>

    <!-- my page -->
    <string name="mypage_friend_invitation">친구 초대</string>
    <string name="mypage_mail">문의하기</string>
    <string name="mypage_service_comment">서비스 의견함</string>
    <string name="mypage_notice">공지사항</string>
    <string name="mypage_set_alarm">알림 설정</string>
    <string name="mypage_tos">이용약관</string>
    <string name="mypage_privacy">개인정보 처리방침</string>
    <string name="mypage_version">버전정보</string>
    <string name="mypage_kakao_comment">블루클럽 카카오 채널 문의</string>
    <string name="mypage_comment_guide">궁금한 점이 있으면 언제든 문의해 주세요🤔</string>
    <string name="mypage_update">업데이트</string>

    <string name="mypage_goal_income_text">목표수입 %s</string>

    <!-- profile setting -->
    <string name="profile_setting">프로필 수정</string>
    <string name="nickname">닉네임</string>
    <string name="job">직업</string>
    <string name="monthly_income_goal">매달 목표 수입</string>
    <string name="logout">로그아웃</string>
    <string name="withdraw">회원탈퇴</string>
    <string name="star">*</string>

    <!-- notification -->
    <string name="noti_title">알림</string>
    <string name="noti_zero_title">아직 새로운 알림이 없어요</string>
    <string name="noti_zero_description">푸시 알림에 동의해 주시면\n새로운 소식을 가장 먼저 알려 드릴게요!</string>
    <string name="noti_move_to_setting">알림 설정하러 가기</string>

    <!-- job selecting -->
    <string name="select_job">직업을 선택해주세요</string>

    <!-- withdraw -->
    <string name="withdraw_success">회원 탈퇴가 완료되었습니다.</string>
    <string name="withdraw_fail">회원 탈퇴에 실패하였습니다.</string>
    <string name="withdraw_description">탈퇴시 계정은 삭제되며 복구되지 않아요.\n회원 탈퇴하시겠습니까?</string>
    <string name="cancel">취소</string>
    <string name="withdraw_yes">탈퇴</string>

    <!-- alert setting -->
    <string name="alert_title">알림 설정</string>
    <string name="push_alert">푸시알림</string>
    <string name="marketing_alert">마케팅 수신 동의</string>

    <!-- work type -->
    <string name="work_type_title">근무 형태를 골라주세요.</string>
    
    <!-- work card -->
    <string name="work_card_close">닫기</string>
    <string name="work_card_title">수입인증 카드로\n근무 성과를 자랑해봐요</string>
    <string name="work_card_job">%s중</string>
    <string name="work_card_percentage">상위 %s%%</string>
    <string name="work_card_income_tag">수입</string>
    <string name="work_card_worked_day">총 %d건 수행</string>
    <string name="work_card_certification">수입인증 BLUECLUB</string>
    <string name="work_card_save">저장하기</string>
    <string name="work_card_share">공유하기</string>
    <string name="work_card_income">%s원</string>
    <string name="work_card_today_work">오늘 근무도</string>

    <!-- work card loading -->
    <string name="card_loading_title">근무기록 저장 후\n이미지로 추출중이에요</string>
    <string name="card_loading_description">열심히 수입인증 카드를 만들고 있어요!</string>

    <!-- memo -->
    <string name="memo_hint">메모 입력</string>
</resources>