<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_border_radius_12"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_withdraw_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/withdraw"
                android:textAppearance="@style/TextAppearance.H7_Bold"
                android:textColor="@color/gray_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_withdraw_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/withdraw_description"
                android:textAppearance="@style/TextAppearance.Body2_Medium"
                android:textColor="@color/gray_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_withdraw_title" />

            <TextView
                android:id="@+id/no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/background_withdraw_left_btn"
                android:paddingVertical="12dp"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textColor="@color/gray_10"
                app:layout_constraintEnd_toEndOf="@id/view_divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_withdraw_description" />

            <View
                android:id="@+id/view_divider"
                android:layout_width="1dp"
                android:layout_height="16dp"
                app:layout_constraintBottom_toBottomOf="@id/no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/no" />


            <TextView
                android:id="@+id/yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_withdraw_right_btn"
                android:paddingVertical="12dp"
                android:text="@string/withdraw_yes"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Subtitle1"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/no"
                app:layout_constraintTop_toTopOf="@id/no" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
