<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_congratulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:src="@drawable/img_congratulation"
            app:layout_constraintBottom_toTopOf="@+id/tv_auth_finished_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_auth_finished_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_finished_title"
            android:textAppearance="@style/TextAppearance.H6_Bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_auth_finished_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:text="@string/auth_finished_description"
            android:textAppearance="@style/TextAppearance.Subtitle2"
            android:textColor="@color/gray_07"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_auth_finished_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start_now"
            style="@style/Widget.Material.Button.Basic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="38dp"
            android:backgroundTint="@color/primary_normal"
            android:paddingVertical="17dp"
            android:text="@string/start_now"
            android:textAppearance="@style/TextAppearance.Subtitle1"
            android:textColor="@color/white"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
