<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="org.blueclub.presentation.mypage.ProfileSettingViewModel" />

        <import type="org.blueclub.util.extension.StringExtKt" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_setting"
                android:textAppearance="@style/TextAppearance.Subtitle1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="@{viewModel.isSaveAvailable}"
                android:text="@string/save"
                android:textAppearance="@style/TextAppearance.Subtitle1"
                android:textColor="@{viewModel.isSaveAvailable ? @color/primary_normal : @color/gray_05}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_oval"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_app_bar" />

        <ImageView
            android:id="@+id/iv_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
            app:layout_constraintEnd_toEndOf="@+id/iv_profile" />


        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/nickname"
            android:textAppearance="@style/TextAppearance.Subtitle2"
            android:textColor="@color/gray_09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:textAppearance="@style/TextAppearance.Subtitle2"
            android:textColor="@color/red"
            app:layout_constraintStart_toEndOf="@+id/tv_nickname"
            app:layout_constraintTop_toTopOf="@+id/tv_nickname" />


        <EditText
            android:id="@+id/et_nickname"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_edittext_nickname"
            android:gravity="top|start"
            android:hint="@string/nickname_input"
            android:inputType="text|textNoSuggestions"
            android:maxLength="10"
            android:maxLines="1"
            android:text="@={viewModel.nickname}"
            android:textAppearance="@style/TextAppearance.Body1"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_06"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nickname"
            app:maxLen="@{10}" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_check_duplication"
            style="@style/Widget.Material.Button.Basic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:background="@drawable/shape_border_radius_4"
            android:enabled="@{viewModel.nickname != null  &amp; viewModel.isNicknameAvailable != true &amp; viewModel.isNicknameCorrect}"
            android:paddingHorizontal="12dp"
            android:paddingVertical="6dp"
            android:text="@string/check_duplication"
            android:textAppearance="@style/TextAppearance.Subtitle3"
            android:textColor="@color/white"
            app:backgroundTint="@drawable/selector_btn_radius_4"
            app:layout_constraintBottom_toBottomOf="@id/et_nickname"
            app:layout_constraintEnd_toEndOf="@+id/et_nickname"
            app:layout_constraintTop_toTopOf="@+id/et_nickname" />

        <TextView
            android:id="@+id/tv_nickname_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:text="@{context.getString(viewModel.nicknameInputGuide.strRes)}"
            android:textAppearance="@style/TextAppearance.Caption1"
            android:textColor="@{context.getColor(viewModel.nicknameInputGuide.colorRes)}"
            app:layout_constraintEnd_toEndOf="@id/et_nickname"
            app:layout_constraintTop_toBottomOf="@id/et_nickname" />


        <TextView
            android:id="@+id/tv_nickname_length_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@{@string/nickname_length_limit(StringExtKt.getStringLength(viewModel.nickname))}"
            android:textAppearance="@style/TextAppearance.Caption1"
            android:textColor="@color/gray_07"
            app:layout_constraintStart_toStartOf="@+id/et_nickname"
            app:layout_constraintTop_toBottomOf="@id/et_nickname"
            tools:text="0 / 10" />


        <TextView
            android:id="@+id/tv_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/job"
            android:textAppearance="@style/TextAppearance.Subtitle2"
            android:textColor="@color/gray_09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nickname_length_limit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:textAppearance="@style/TextAppearance.Subtitle2"
            android:textColor="@color/red"
            app:layout_constraintStart_toEndOf="@+id/tv_job"
            app:layout_constraintTop_toTopOf="@+id/tv_job" />


        <TextView
            android:id="@+id/layout_job"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_edittext_nickname"
            android:backgroundTint="@color/gray_01"
            android:gravity="center_vertical"
            android:text="@{context.getString(viewModel.chosenJobType.titleRes)}"
            android:textAppearance="@style/TextAppearance.Body1"
            android:textColor="@color/gray_08"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_job"
            tools:text="골프캐디" />

        <ImageView
            android:id="@+id/iv_job_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_arrow_down_black"
            app:layout_constraintBottom_toBottomOf="@+id/layout_job"
            app:layout_constraintEnd_toEndOf="@+id/layout_job"
            app:layout_constraintTop_toTopOf="@+id/layout_job" />


        <TextView
            android:id="@+id/tv_income_goal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/monthly_income_goal"
            android:textAppearance="@style/TextAppearance.Subtitle2"
            android:textColor="@color/gray_09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_job" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:textAppearance="@style/TextAppearance.Subtitle2"
            android:textColor="@color/red"
            app:layout_constraintStart_toEndOf="@+id/tv_income_goal_title"
            app:layout_constraintTop_toTopOf="@+id/tv_income_goal_title" />

        <EditText
            android:id="@+id/et_goal_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/shape_border_radius_4"
            android:backgroundTint="@color/gray_01"
            android:gravity="top|end"
            android:hint="@string/goal_setting_hint"
            android:inputType="number"
            android:maxLines="1"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp"
            android:text="@={viewModel.incomeGoal}"
            android:textAppearance="@style/TextAppearance.Body1"
            android:textColorHint="@color/gray_06"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_income_goal_title" />

        <TextView
            android:id="@+id/tv_goal_setting_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:text="@{viewModel.goalErrorMsg.strRes}"
            android:textAppearance="@style/TextAppearance.Caption1"
            android:textColor="@{context.getColor(viewModel.goalErrorMsg.colorRes)}"
            app:layout_constraintEnd_toEndOf="@+id/et_goal_setting"
            app:layout_constraintTop_toBottomOf="@+id/et_goal_setting"
            tools:text="@string/goal_setting_too_low" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_goal_setting">

            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textAppearance="@style/TextAppearance.Subtitle2"
                android:textColor="@color/gray_09"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="1dp"
                android:layout_height="16dp"
                android:layout_marginHorizontal="16dp"
                android:background="@color/gray_03"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_withdraw"
                app:layout_constraintStart_toEndOf="@+id/tv_logout"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_withdraw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withdraw"
                android:textAppearance="@style/TextAppearance.Subtitle2"
                android:textColor="@color/gray_09"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
